fix Add ActionResult errors - both were swapped wrong position

--- a/Factory/wwwroot/css/styles.css
+++ b/Factory/wwwroot/css/styles.css
@@ -23,15 +23,25 @@ nav {
 	width: 100%;
 }
 
-.details-maininfo, .details-maininfo-card, .details-maininfo-card-lists{
+.details-maininfo-card {
 	display: flex;
 	flex-direction: column;
+	width: 70vw;
 	margin: auto;
-	justify-content: flex-start;
-	gap: 0.5rem;
+
 }
 
 #maininfo-card-home-index {
 	display: flex;
 	flex-direction: row;
+	gap: 1rem;
+	justify-content: center;
+	background-color: rgba(208, 216, 234, 0.9);
+}
+
+.details-maininfo-card-lists li{
+	/* background-color: rgba(255, 255, 255, 0.4); */
+	list-style: none;
+	margin: 1rem;
+	height: 2rem;
 }
